--- a/.github/workflows/generic_ui.yml
+++ b/.github/workflows/generic_ui.yml
@@ -6,31 +6,33 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: [ "test*" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "test" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  CMV_SecurityChecks:
+    runs-on: self-hosted
+    if: "! contains(github.event.head_commit.message, 'maven-release-plugin')"
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Checkout github_actions repo
+        uses: actions/checkout@v3
+        with:
+          repository: Gainsight/github_actions
+          token: ${{ secrets.REPO_CLONE_PAT }}
+          path: github_actions
+      - name: Commit Message Validation Check
+        if: github.event_name == 'pull_request'
+        uses: ./github_actions/actions/cmv_action/
+        with:
+           pull-request-message: ${{ github.event.pull_request.title }}
+           repo-name: ${{ github.event.pull_request.head.repo.name }}
+           pull-request-number: ${{ github.event.pull_request.number }}
+           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      
