--- a/.github/workflows/generic_ui.yml
+++ b/.github/workflows/generic_ui.yml
@@ -5,10 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "test*" ]
-  pull_request:
-    branches: [ "test" ]
+  workflow_call:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -18,21 +15,11 @@ jobs:
 
   CMV_SecurityChecks:
     runs-on: self-hosted
-    if: "! contains(github.event.head_commit.message, 'maven-release-plugin')"
     steps:
-      - name: Checkout github_actions repo
-        uses: actions/checkout@v3
-        with:
-          repository: Gainsight/github_actions
-          token: ${{ secrets.REPO_CLONE_PAT }}
-          path: github_actions
-      - name: Commit Message Validation Check
-        if: github.event_name == 'pull_request'
-        uses: ./github_actions/actions/cmv_action/
-        with:
-           pull-request-message: ${{ github.event.pull_request.title }}
-           repo-name: ${{ github.event.pull_request.head.repo.name }}
-           pull-request-number: ${{ github.event.pull_request.number }}
-           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: test
+        run: echo "hello"
+      - name: test
+        run: echo "hello again"
+      - name: test
+        run: echo "hello for the final time"        
       
